=head1 NAME

DBD::DB2::Changes - List of changes

=cut

=head2 Changes in DBD::DB2 1.88, May 21, 2021

  README file changes. Tested on 5.18 and above.

=head2 Changes in DBD::DB2 1.87, April 07, 2021

  Uploaded but deleted due to duplicate entry.

=head2 Changes in DBD::DB2 1.86, April 07, 2021

  Fixed RHEL-8 related issue in C code compilation. Tested on 5.18 and above.

=head2 Changes in DBD::DB2 1.85, Oct 08, 2012

  Fixed issue cpan #77414 - Bind fails when run with Perl 5.16
  Fixed issue cpan #79265 - DBD::DB2 tables() signature changed as per latest DBI spec. The old syntax too is supported 
  
=head2 Changes in DBD::DB2 1.84, Mar 21, 2012

  Implemented usage of SQLDataSources ODBC API in dbd_data_sources to remove dependency of instance based DB2 client.
  
=head2 Changes in DBD::DB2 1.83, Mar 02, 2012

  Fixed Data truncated error returned while fetching XML documents.
  
=head2 Changes in DBD::DB2 1.82, Nov 05, 2011

  Compatibility with Perl version 5.14 - Cpan - 68933
  
=head2 Changes in DBD::DB2 1.81, Jul 03, 2011

  Binding to the return value of a stored procedure silently fails - Cpan - 42185
  Return warning codes when there is successful execution of SQLs with warnings
  
=head2 Changes in DBD::DB2 1.80, Oct 29, 2010

  Fix for Handling for NULL data LOB broken on Perl-5.8
  
=head2 Changes in DBD::DB2 1.79, Jul 14, 2010

  Fixed bug 57562: Handling for NULL data LOB added.

=head2 Changes in DBD::DB2 1.78, Jan 25, 2010

  Changes for proper handling of LOB types
  Fixed issue of segfault due to passing of NULL to DBIh_SET_ERR_CHAR - Cpan - 52883/53525

=head2 Changes in DBD::DB2 1.76, Dec 04, 2009

  Changes for proper functioning of ChopBlanks Feature - Cpan - 50703/51173
  Adding CLONE method in DB2.pm to support threaded environment

=head2 Changes in DBD::DB2 1.75, Nov 09, 2009

  Changes in Makefile.PL - Cpan - 49802

=head2 Changes in DBD::DB2 1.74, Aug 13, 2009
